Bug 782644 - Prevent against nsObjectLoadingContent re-entry from content policy. r=josh